--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* Estilos generales para la página */
 body {
     font-family: 'Arial', sans-serif;
     background-color: #f5f5f5;
@@ -9,9 +8,50 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
+    margin: 0;
+    padding: 0;
 }
 
-/* ... (estilos previos) ... */
+.container {
+    max-width: 1200px; 
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+header {
+    /* background-color: #333; */
+    color: #333;
+    padding: 20px 0;
+    text-align: center;
+}
+
+header h1 {
+    margin: 0;
+    font-size: 2.5em;
+}
+
+header p {
+    font-size: 1.2em;
+    margin-top: 10px;
+    opacity: 0.8;
+}
+
+
+#newBookBtn {
+    background-color: #007BFF; 
+    color: white; 
+    padding: 10px 20px; 
+    border-radius: 5px; 
+    border: none; 
+    font-size: 16px;
+    transition: background-color 0.2s;
+    cursor: pointer;
+    margin-bottom: 40px;
+}
+
+#newBookBtn:hover {
+    background-color: #0056b3; 
+}
 
 /* Botón Toggle Read Status */
 .toggle-read-status {
@@ -71,9 +111,9 @@ button {
 #booksContainer {
     display: flex;
     flex-wrap: wrap;
-    /* justify-content: center; */
+    justify-content: center;
     width: 80%;
-    /* gap: 20px; */
+    gap: 20px;
 }
 
 /* Estilos para las tarjetas de libros */
@@ -85,7 +125,9 @@ button {
     transition: all 0.2s ease;
     display: flex;
     flex-direction: column;      /* Organiza los hijos verticalmente */
-    justify-content: space-between; 
+    justify-content: space-between;
+    min-width: 200px; 
+    max-width: 200px;
 }
 
 .book-card:hover {
