--- a/styles.css
+++ b/styles.css
@@ -3,25 +3,28 @@ body {
     background-color: #f5f5f5;
     margin: 0;
     padding: 0;
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
     height: 100vh;
-    margin: 0;
-    padding: 0;
+  
 }
 
 .container {
     max-width: 1200px; 
     margin: 0 auto;
     padding: 0 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 header {
-    /* background-color: #333; */
     color: #333;
-    padding: 20px 0;
+    padding-top: 50px;
+    padding-bottom: 10px;
     text-align: center;
 }
 
@@ -36,6 +39,12 @@ header p {
     opacity: 0.8;
 }
 
+.content-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%; 
+}
 
 #newBookBtn {
     background-color: #007BFF; 
@@ -114,6 +123,7 @@ button {
     justify-content: center;
     width: 80%;
     gap: 20px;
+    margin-bottom: 50px;
 }
 
 /* Estilos para las tarjetas de libros */
